--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-Code also at https://github.com/junkumar/pactureflag/commits/master/
+Code also at https://github.com/junkumar/pactureflag/commits/master/ abcdef 
 
 
 
